<resources>
    <string name="app_name">JobTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_job">Job</string>
    <string name="nav_task">Task</string>
    <string name="nav_admin">Admin</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Job</item>
        <item>Task</item>
        <item>Admin</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string-array name="employee_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="employee_institute">
        <item>Daffodil</item>
        <item>DIU</item>
        <item>DCL</item>
    </string-array>
    <string-array name="employee_department">
        <item>CSE</item>
        <item>EEE</item>
        <item>SWE</item>
        <item>English</item>
        <item>BBA</item>
        <item>ETE</item>
        <item>Commerce</item>
        <item>Real Estate</item>
        <item>THM</item>
        <item>Entrepreneurship</item>
        <item>MCT</item>
        <item>NS</item>
        <item>ESDP</item>
        <item>TE</item>
        <item>Architecture</item>
        <item>CE</item>
        <item>Pharmachy</item>
        <item>NFE</item>
        <item>PH</item>
        <item>Law</item>
        <item>JMC</item>
        <item>DS</item>
    </string-array>
    <string-array name="employee_marital_status">
        <item>Married</item>
        <item>Single</item>
        <item>divorces</item>
    </string-array>
    <string-array name="employee_blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="employee_religion">
        <item>Islam</item>
        <item>Hindu</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_ringtone">Ringtone</string>
    <string-array name="employee_task_accessability">
        <item>Public</item>
        <item>Proctected</item>
        <item>Private</item>
    </string-array>
    <string-array name="employee_task_progress">
        <item>0</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>80</item>
        <item>100</item>
    </string-array>
    <string-array name="employee_task_priority">
        <item>Very Low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>
    <string-array name="employee_task_status">
        <item>Pending</item>
        <item>Ongoing</item>
        <item>Complete</item>
        <item>Done</item>
    </string-array>
    <string-array name="employee_task_role">
        <item>In-Charge</item>
        <item>Member</item>
    </string-array>
    <string-array name="employee_job_title">
        <item>Ecure</item>
        <item>Student Portal</item>
        <item>UNDP</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_about_us_section">This is About US Section</string>
    <string name="hint_emp_id">Employee Id</string>
    <string name="hint_emp_pass">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="hint_emp_name">Name</string>
    <string name="hint_emp_email">Email</string>
    <string name="hint_enter_job_department">Department</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="text_already_have_account">Already Have An Account ?</string>
    <string name="button_sign_in">Sign In</string>
    <string name="set_department">Set Department</string>
    <string name="set_designation">Set Designation</string>
    <string name="hint_enter_employee_designation">Enter Designation</string>
    <string name="position_button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>
    <string name="text_job_title">Job Title</string>
    <string name="text_job_owner">Job Owner</string>
    <string name="text_employee_department">Department</string>
    <string name="text_task_given_date">Given Date</string>
    <string name="text_task_est_date">Est. Date</string>
    <string name="status">Status</string>
    <string name="progress">Progress</string>
    <string name="priority">Priority</string>
    <string name="text_task_title">Task Title</string>
    <string name="text_task_owner">Task Owner</string>
    <string name="text_task_status">Task Status</string>
    <string name="text_task_priority">Task Priority</string>
    <string name="text_task_progress">Progress</string>
    <string name="hint_enter_job_title">Enter Job Title</string>
    <string name="text_job_description">Job Description</string>
    <string name="hint_enter_job_description">Enter Job Description</string>
    <string name="text_task_date">Date</string>
    <string name="text_task_dead_line">Deadline</string>
    <string name="check_box_task_had_dead_line">This task has a dead line</string>
    <string name="check_box_job_had_dead_line">This Job has a dead line</string>
    <string name="hint_enter_task_dead">Select Task Dead</string>
    <string name="hint_enter_job_dead">Select Job Dead</string>
    <string name="text_task_Accesibility">Accesibility</string>
    <string name="hint_enter_task_Accesibility">Select Task Accesibility</string>
    <string name="hint_enter_job_Accesibility">Select Job Accesibility</string>
    <string name="hint_enter_task_progress">Select Task Progress</string>
    <string name="hint_enter_job_progress">Select Job Progress</string>
    <string name="hint_enter_task_priority">Select Task Priority</string>
    <string name="hint_enter_job_priority">Select Job Priority</string>
    <string name="hint_enter_task_status">Select Task Status</string>
    <string name="hint_enter_job_status">Select Job Status</string>
    <string name="hint_select_task_department">Select Task Department</string>
    <string name="hint_enter_task_department">Please Enter Task Department</string>
    <string name="text_task_assign_to">Assign to</string>
    <string name="hint_enter_task_asign_to">Select Task Assign to</string>
    <string name="text_task_role">Role</string>
    <string name="hint_enter_task_role">Select Task Role</string>
    <string name="task_activity_add_to_list">Add to List</string>
    <string name="task_activity_remove_from_list">Remove from List</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="text_select_job">Select Job</string>
    <string name="button_task_management">Task Management</string>
    <string name="text_employee_gender">Gender</string>
    <string name="text_employee_id">Employee ID</string>
    <string name="text_employee_date_of_birth">Date of Birth</string>
    <string name="text_employee_marital_status">Marital Status</string>
    <string name="text_employee_blood_group">Blood Group</string>
    <string name="text_employee_im">IM</string>
    <string name="text_employee_religion">Religion</string>
    <string name="text_employee_mobile">Mobile</string>
    <string name="text_employee_office_phone">Office Phone</string>
    <string name="text_task_Attribute">Attribute</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_employee_id">Enter your User Id</string>
    <string name="hint_enter_employeename">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_date_of_birth">Select Your Date of Birth</string>
    <string name="hint_enter_im">Enter Your IM</string>
    <string name="hint_enter_mobile_number">Enter Your Mobile Number</string>
    <string name="hint_enter_office_phone">Enter Your Office Phone</string>
    <string name="hint_enter_task_title">Enter task Title</string>
    <string name="text_task_description">Description</string>
    <string name="hint_enter_task_description">Enter task Description</string>
    <string name="hint_enter_task_deadline">Select Task Deadline</string>
    <string name="hint_enter_employee_new_designation">Please enter new Designation</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>