<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_job" />

        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_task" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_admin" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
