<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bd.httpdaffodilvarsity.JobTracking.activity.RegistrationActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_emp_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_employee_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_emp_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmployeePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_emp_pass" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_emp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_employeename_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_emp_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_emp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_email_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_emp_email" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_emp_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_employee_department"
            android:background="@drawable/border"
            android:hint="@string/hint_enter_job_department"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/navigationBarColor"
            android:textColorHint="@color/colorBlack"
            android:nextFocusDown="@+id/job_priority_text_create"
            android:textSize="@dimen/login_buttons_text_size" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_create_employee_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:onClick="onCreateAccountPressed"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>


    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:background="@drawable/ripple_effect"
        android:text="@string/text_already_have_account" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="GoToLoginActivity"
        android:background="@drawable/ripple_effect"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/button_sign_in"
        android:textColor="@color/colorPrimary"
        android:nextFocusDown="@+id/tv_edit_user_account"/>

</LinearLayout>
