<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/employee_designation"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_employee_designation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_button_cancel"
                android:id="@+id/cancelCompose"
                android:layout_marginTop="24dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:onClick="addDesignation"
                android:id="@+id/okCompose"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>