<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:textColor="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_job_title"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/list_item_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/text_view_job_title"
                android:hint="@string/text_job_title"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_job_owner"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/list_item_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/text_view_job_owner"
                android:hint="@string/text_job_owner"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_employee_department"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:id="@+id/text_view_job_department"
                android:hint="@string/text_employee_department"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_task_given_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:id="@+id/text_job_given_date"
                android:hint="@string/text_task_given_date"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_task_est_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:hint="@string/text_task_est_date"
                android:id="@+id/text_job_est_date"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:id="@+id/text_view_job_status"
                android:hint="@string/status"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/progress"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:id="@+id/text_job_progress"
                android:hint="@string/progress"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/priority"
                android:textColor="@android:color/black"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:id="@+id/text_job_priority"
                android:hint="@string/priority"
                android:padding="10dp"
                android:textSize="@dimen/list_item_text_size" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

